--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ tmp/
 # Fichiers générés par Playwright (vidéos, captures d'écran)
 videos/
 screenshot_*.png
+allure-results/
 
 # Fichiers de configuration sensibles
 .env
