--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,18 +19,18 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: 📦 Installer les dépendances
+      - name: 📦 Installer les dépendances Python
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           playwright install
 
-      - name: 🧪 Exécuter les tests avec rapport HTML
+      - name: 🧪 Lancer les tests avec Allure
         run: |
-          pytest tests/ --html=report.html --self-contained-html
+          pytest --alluredir=allure-results
 
-      - name: 📤 Enregistrer le rapport HTML
+      - name: 📤 Sauvegarder le dossier allure-results
         uses: actions/upload-artifact@v4
         with:
-          name: Rapport_Playwright
-          path: report.html
+          name: Rapport_Allure
+          path: allure-results
